(13/09) Variáveis, tipos e operadores aritméticos

--- a/01-variaveis.html
+++ b/01-variaveis.html
@@ -84,7 +84,7 @@
         // Operador de módulo ( resto da divisão)
         res = 5 % 2             // 1 (resto da divisão)
         res = 11 % 3            // 2 (resto da divisão)
-        res = 8 % 2             // 
+        res = 8 % 2             // 0 (resto da divisão)
 
         alert(res)
         
