(18/09) while, do while, for e exercícios

--- a/ex03b-calculadora.html
+++ b/ex03b-calculadora.html
@@ -45,7 +45,7 @@
                     break
 
                 case '-':
-                    res = num1 + num2
+                    res = num1 - num2
                     break
 
                 case 'X':       // case vazio pois ele não suporta uma de uma condição
